<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="false"
        android:key="status"
        android:summaryOff="@string/settings_status_off_summary"
        android:summaryOn="@string/settings_status_on_summary"
        android:switchTextOff="@string/settings_status_off"
        android:switchTextOn="@string/settings_status_on"
        android:title="@string/settings_status_title" />

    <EditTextPreference
        android:key="id"
        android:title="@string/settings_id_title" />

    <EditTextPreference
        android:defaultValue="https://qmodi.com/tracker/"
        android:key="url"
        android:summary="@string/settings_url_summary"
        android:title="@string/settings_url_title"
        app:isPreferenceVisible="false"/>

    <ListPreference
        android:defaultValue="medium"
        android:entries="@array/settings_accuracy_names"
        android:entryValues="@array/settings_accuracy_values"
        android:key="accuracy"
        android:summary="@string/settings_accuracy_summary"
        app:isPreferenceVisible="false"
        android:title="@string/settings_accuracy_title" />

    <EditTextPreference
        android:defaultValue="060"
        android:key="interval"
        android:inputType="number"
        android:summary="@string/settings_interval_summary"
        app:isPreferenceVisible="false"
        android:title="@string/settings_interval_title" />

    <EditTextPreference
        android:defaultValue="0"
        android:key="distance"
        android:inputType="number"
        android:summary="@string/settings_distance_summary"
        app:isPreferenceVisible="false"
        android:title="@string/settings_distance_title" />

    <EditTextPreference
        android:defaultValue="0"
        android:key="angle"
        android:inputType="number"
        android:summary="@string/settings_angle_summary"
        app:isPreferenceVisible="false"
        android:title="@string/settings_angle_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="buffer"
        android:summaryOff="@string/settings_buffer_off_summary"
        android:summaryOn="@string/settings_buffer_on_summary"
        app:isPreferenceVisible="false"
        android:title="@string/settings_buffer" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="wakelock"
        android:summaryOff="@string/settings_wakelock_off_summary"
        android:summaryOn="@string/settings_wakelock_on_summary"
        app:isPreferenceVisible="false"
        android:title="@string/settings_wakelock" />

</PreferenceScreen>
